--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -9,6 +9,7 @@
           <th class='tbl_sm'>Spec.</th>
           <th>Provider#</th>
           <th>Group#</th>
+          <th>CPSO#</th>
 	  <th>WSIB#</th>
           <th class='tbl_sm'>Bills?</th>
 	  <th class='tbl_lg'> Address</th>
