--- a/app/views/paystubs/index.html.erb
+++ b/app/views/paystubs/index.html.erb
@@ -9,8 +9,8 @@
           <th>Mon/Yr</th>
 	  <th class="tbl_lsm">#Claims</th>
 	  <th class="tbl_lsm">#Services</th>
-          <th>Total Gross</th>
-          <th>Total Net</th>
+          <th>Gross</th>
+          <th>Net</th>
           <th>RA File</th>
 	  <th>Download</th>
 	   <% if current_user.admin?  %>
