--- a/app/views/static_pages/news.html.erb
+++ b/app/views/static_pages/news.html.erb
@@ -1,17 +1,19 @@
-
-<% if logged_in? %>
+<%# if logged_in? %>
 	
   <h1> Recent changes to Walk-In EMR </h1>
 
 	<div class="panel panel-default">
 		<div class="panel-body news-panel-body">
-			<li>You can now change status of visits with errors (there’s one in day sheet) to Ready to Bill once error is fixed.
+			<li> Keyboard <left> <right> arrows can now be used for navigation in pages with page selector </li>
+			<li> Scanned Day Charts now cover period 20-Jan-2006 - 31-Aug-2007 </li>
+			<li> Doctor table reviewed. Added WSIB# and accepts_new_patients. District and Specialty are now drop-downs populated from coresponding collections </li> 
+			<li> Letters and Referreals are now form-driven; pdf's are genereted on the fly and stored on a server. Edit replaces the document </li>
+			<li> Invoices, Referrals and Letters are now associated with patient, but are also accessible through Docs drop-down </li>
+			<li> You can now change status of visits with errors (there’s one in day sheet) to Ready to Bill once error is fixed.
 				Error code in shown on visit page. Description available on mouse over</li>
-
-			<li>Visit form now pops up when new visit is created to allow date/time entry if necessary. Please use with caution</li>
-			<li>Billed and paid for visits now can be added to. Theres new button on visit form for such visits called “Add Cash Service”</li>
-
-
+			<li> Visit form now pops up when new visit is created to allow date/time entry if necessary. Please use with caution</li>
+			<li> Billed and paid for visits now can be added to. Theres new button on visit form for such visits called “Add Cash Service”</li>
+			<li> 3 User categories are now supported: User, Doctor and Admin. Each one has different views and permissions. Account-related email functionality added </li> 
 			<li> End of day reports can only be generated when billing is done </li> 
 			<li> Doctor selection drop-down moved to the header. Sticky until changed </li>
 			<li> No new visits for Deceased patients </li>
@@ -54,4 +56,4 @@
 	 
 	Thank you!
 
-<% end %>
+<%# end %>
