--- a/app/views/doctors/_doctor.html.erb
+++ b/app/views/doctors/_doctor.html.erb
@@ -8,6 +8,7 @@
 	<td><%= doctor.specialty %></td>
 	<td><%= doctor.provider_no %> </td>
 	<td><%= doctor.group_no %> </td> 
+	<td><%= doctor.cpso_num %> </td> 
 	<td><%= doctor.wsib_num %> </td> 
 	<td><%= doctor.bills_str %> </td> 
 	<td><%= doctor.address %> </td> 
