--- a/app/views/layouts/_forms.html.erb
+++ b/app/views/layouts/_forms.html.erb
@@ -8,5 +8,6 @@
       <li> <%= link_to "WCB Forms", forms_path(ftype: WCB_FORM), method: :get %> </li>
       <li> <%= link_to "Lab Forms", forms_path(ftype: LAB_FORM), method: :get %> </li>
       <li> <%= link_to "MTO Forms", forms_path(ftype: MTO_FORM), method: :get %> </li>
+      <li> <%= link_to "Clinic Forms", forms_path(ftype: CLINIC_FORM), method: :get %> </li>
     </ul>
 </li>
