--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -2,33 +2,29 @@
 <%= render "shared/modal", size:'lg' %>
 <% remote = device_is_desktop? %>
 
-	<h1><%= @patient.full_name %> :  Patient profile </h1>
+<h1><%= @patient.full_name %> :  Patient Profile </h1>
 
 <div class="row">
   <aside class="col-md-6">
     <section class="user_info">
-	   <pre class="pre-scrollable" >
-	<b>Name:</b> <%= @patient.full_name %> <b>Type:</b> <%= PATIENT_TYPES.invert[@patient.pat_type] %>
-	<b>DOB:</b> <%= @patient.dob %> : <%= @patient.age_str %>  <%= @patient.sex %>
+	<pre class="pre-scrollable">
+	<b>Name: <%= @patient.full_name %> <%= @patient.age_str %>  <%= @patient.full_sex %> <% if @patient.chart_file.present? %> <%= link_to '<i class="glyphicon glyphicon-copy"></i>'.html_safe, chart_patient_path(@patient) %> <% end %>
+	Born: <%= @patient.dob %>
 	<% if @patient.pat_type == IFH_PATIENT %>
-	<b>IFH #:</b> <%= @patient.ifh_number %> 
+	IFH #: <%= @patient.ifh_number %> 
 	<% else %>
-	<b>Health Card:</b> <%= @patient.ohip_num %> <%= @patient.ohip_ver %> (<%= @patient.hin_prov %>) <b>Expires:</b> <%= @patient.hin_expiry %>
+	Health Card: <%= @patient.ohip_num %> <%= @patient.ohip_ver %> (<%= @patient.hin_prov %>) Expires: <%= @patient.hin_expiry %>
 	<% end %>
-	<b>Phone:</b> <%= num_to_phone(@patient.phone) %>  <b>Mobile:</b> <%= num_to_phone(@patient.mobile) %> <b>Email:</b> <%= mail_to @patient.email %>
-	<b>Address:</b> <%= @patient.addr %>
+	Phone: <%= num_to_phone(@patient.phone) %> Mobile: <%= num_to_phone(@patient.mobile) %> <% if @patient.email.present? %> Email: <%= mail_to @patient.email %> <% end %>
+	Address: <%= @patient.addr %>
 		    <%= @patient.city %> <%= @patient.prov %> 
 		    <%= @patient.postal %>
-		    <%= @patient.country %>
-        <% if !@patient.chart_file.blank? %>
-	<b>Chart File:</b> <%= link_to 'Chart', chart_patient_path(@patient) %>
-        <% end %>
 	<% if @patient.allergies.present? %>
-	<b>Allergies</b>: <%= @patient.allergies %>
+	Allergies: <%= @patient.allergies %>
 	<% end %>
 	<% if @patient.medications.present? %>
-	<b>Medications</b>: <%= @patient.medications  %>
-	<% end %>
+	Medications: <%= @patient.medications  %>
+	<% end %> </b>
          </pre>
 	 
 	 <% if @patient.notes.present? %> 
