Commit empty directories instead of ignoring them; forms tweak; Clinic forms

--- a/app/views/forms/index.html.erb
+++ b/app/views/forms/index.html.erb
@@ -4,7 +4,7 @@
 <table class="tbl table-hover" >
   <thead>
       <tr>
-	  <th>Name</th>
+	  <th class='tbl_lg'>Name</th>
 	  <th class="tbl_lg">Description</th>
 	  <th class="tbl_lsm"class="tbl_lsm">Type</th>
 	  <th>File Name</th>
