Patient Charts added to Docs drop-down; Tooltip for patient search; utility to import charts
Model, views and controller for Charts;

--- a/app/views/layouts/_docs.html.erb
+++ b/app/views/layouts/_docs.html.erb
@@ -6,6 +6,7 @@
      <li> <%= link_to "Invoices", invoices_path, method: :get %> </li>
      <li> <%= link_to "Letters", letters_path, method: :get %> </li>
      <li> <%= link_to "Referrals", referrals_path, method: :get %> </li>
-     <li> <%= link_to "Daily Charts", daily_charts_path, method: :get %> </li>
+     <li> <%= link_to "Day Charts", daily_charts_path, method: :get %> </li>
+     <li> <%= link_to "Patient Charts", charts_path, method: :get %> </li>
   </ul>
 </li>
