--- a/app/views/static_pages/news.html.erb
+++ b/app/views/static_pages/news.html.erb
@@ -4,6 +4,7 @@
 
 	<div class="panel panel-default">
 		<div class="panel-body news-panel-body">
+			<li> Patients charts are now available in Docs drop-down menu </li>
 			<li> Keyboard <left> <right> arrows can now be used for navigation in pages with page selector </li>
 			<li> Scanned Day Charts now cover period 20-Jan-2006 - 31-Aug-2007 </li>
 			<li> Doctor table reviewed. Added WSIB# and accepts_new_patients. District and Specialty are now drop-downs populated from coresponding collections </li> 
