--- a/app/views/layouts/_find.html.erb
+++ b/app/views/layouts/_find.html.erb
@@ -1,5 +1,5 @@
 <% if controller_name == 'patients' %> 
-   <% tool_tip_title = "Full/Partial Last Name, Fist Name, Health Number or Date Of Birth: [dd-mm-yyyy]" %>
+   <% tool_tip_title = "Full/Partial Last Name, First Name, Health Number or Date Of Birth: [dd-mm-yyyy]" %>
 <% end %>
 
 <li style="width: 30px;">&nbsp;</li>
@@ -11,8 +11,7 @@
 	   class: "has_tip", 'data-toggle': 'tooltip', placement: 'top', 
      	   title: tool_tip_title, 
            placeholder: "Find #{controller_name.singularize}",
-	   id: "findstr", :onChange => 'javascript: this.form.submit()', 
-	   style: "height:25px !important;"
+	   id: "findstr", :onChange => 'javascript: this.form.submit()' 
           %>
      </div>
    </div>
