Bug in referral controller/show

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -18,7 +18,7 @@ html,body {
   height: 100%;
   padding-top: 0; 
   overflow-y: scroll;
-//  font: 13px Arial, Helvetica, sans-serif;
+  font: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 // not verified !!
@@ -26,7 +26,7 @@ p {
     padding: .8em 1.0;
 //    line-height: 1.5em;
     text-align: justify;
-  font: 10px Arial, Helvetica, sans-serif;
+//  font: 10px Arial, Helvetica, sans-serif;
 }
 
 .container {
