--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -25,7 +25,7 @@ Please, call to confirm: <b>(905) 561-9255</b>
 <%# people_waiting = Visit.where(status: ARRIVED).count rescue 0 %>
 <section id='marquee'>
   <div class="container-fluid">
-    <marquee direction="left"><h3> <%= Schedule::doc_on_duty %> ... Last patient sign in at: <%= Schedule::closing_time %> ... Flu shots and other injections are provided with no wait time </h3></marquee>
+    <marquee direction="left"><h3> <%= Schedule::doc_on_duty %>  ... Flu shots and other injections are provided with no wait time </h3></marquee>
   </div>
 </section>
 
