home page tweaks

--- a/app/views/schedules/_schedule.html.erb
+++ b/app/views/schedules/_schedule.html.erb
@@ -1,20 +1,11 @@
 <% @schedules = Schedule.all %>
-<h3 class="display-1">Doctor's Schedules</h3>
-<table class="tbl2 table-hover table-striped table-bordered" >
-  <thead>
-    <tr>
-      <th>Day</th>
-      <th>Doctor</th>
-      <th>From</th>
-      <th>To</th>
-    </tr>
-  </thead>
-
+<table class="tbl table-hover table-striped table-bordered" >
+	<caption><h4>Doctor's Schedules</h4></caption>
   <tbody>
     <% @schedules.each do |schedule| %>
       <tr>
         <td><%= Date::DAYNAMES[schedule.dow] %></td>
-        <td><%= schedule.doctor.lname %></td>
+        <td>Dr. <%= schedule.doctor.lname %></td>
         <td><%= schedule.start_time.strftime("%l:%M%p") %></td>
         <td><%= schedule.end_time.strftime("%l:%M%p") %></td>
       </tr>
