--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,7 +6,7 @@
 <div class="hdr-text">We are open every day!  </div> 
 </p>
 <div style="font-size: 14px">
-<p>	
+	<div class='spacer-20'></div>
 No appointment is necessary, we service both Ontario and out of province patients.
 New patients are welcome. We provide specialist referrals and speak many different languages.
 
@@ -16,9 +16,9 @@ Need a flushot? We provide flu shots and other injections without wait
 <b> 9am to 8pm, Mon-Fri, 9am to 2pm on weekends & holidays</b>
 
 <p>
-We work together with the public Healthdd Department and many specialists to satisfy the needs of our patients.
+We work together with the public Health Department and many specialists to satisfy the needs of our patients.
 Please arrive half an hour before closing time.  Schedules are subject to change without notice. 
-<b>(905) 561-9255</b>
+Call to confirm: <b>(905) 561-9255</b>
 </div>
 <div class='spacer-20'></div>
 
@@ -33,12 +33,13 @@ Please arrive half an hour before closing time.  Schedules are subject to change
 
 <div class='spacer-20'></div>
 
-<div align="right" style="padding:0; margin:0">
-  <span style="width:500px; float:left; margin-left: 20px;">
+<div align="right">
+  <span style="width:500px; float:left; margin-left: 20px; ">
   <%= render "schedules/schedule" %>
   </span>
   
-  <span style="width:250px">
+<div class='spacer-30'></div>
+  <span style="width:250px; float:right; margin-right: 20px;">
   <img src='/images/map.png' width="240px"></img>
   <div class="caption-text"><a href="https://medimap.ca/Stoney-Creek-Medical-Walk-In-Clinic" target="_new">Show current Wait Time</a></div> 
   </span>
