sort order in daysheet changed

--- a/app/views/daysheet/index.html.erb
+++ b/app/views/daysheet/index.html.erb
@@ -32,7 +32,7 @@
           <th class="tbl_md">HC/IFH #</th>
           <th class="tbl_lsm">Diag.</th>
           <th class="tbl_md">Services</th>
-          <th class="tbl_lsm">Status</th>
+          <th class="tbl_lsm"><%= sortable 'status', 'Status' %></th>
 	  <th class="tbl_sm"></th> 
           <th class="tbl_sm"></th>
           <th class="tbl_sm"></th>
