Form File upload; form tweaks

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -21,12 +21,11 @@ html,body {
   font: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-// not verified !!
-p {
-    padding: .8em 1.0;
-//    line-height: 1.5em;
+p.medium {
+//    padding: .8em 1.0;
+    line-height: 1.4;
     text-align: justify;
-//  font: 10px Arial, Helvetica, sans-serif;
+    font: Arial, Helvetica, sans-serif;
 }
 
 .container {
