--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,23 +4,27 @@
 </div>
 
 <div class="hdr-text">We are open every day!  </div> 
-</p>
-<div style="font-size: 14px">
-	<div class='spacer-20'></div>
+	
+<div class='spacer-20'></div>
+
+<p class="medium">
 No appointment is necessary, we service both Ontario and out of province patients.
-New patients are welcome. We provide specialist referrals and speak many different languages.
+New patients are welcome. Driver Medical Exam. We provide specialist referrals and speak many different languages.
+Pharmacy is available on the premises. Need a flushot? We provide flu shots and other injections without wait.  
+</p>
 
-Need a flushot? We provide flu shots and other injections without wait 
+<p class="medium">
+<h3>9am to 8pm, Mon-Fri, 9am to 2pm on weekends & holidays</h3>
+</p>
 
-<p>
-<b> 9am to 8pm, Mon-Fri, 9am to 2pm on weekends & holidays</b>
-
-<p>
+<div class='spacer-10'></div>
+<p class="medium">
 We work together with the public Health Department and many specialists to satisfy the needs of our patients.
 Please arrive half an hour before closing time.  Schedules are subject to change without notice. 
 Call to confirm: <b>(905) 561-9255</b>
-</div>
-<div class='spacer-20'></div>
+</p>
+
+<div class='spacer-10'></div>
 
 <%# people_waiting = Visit.where(status: ARRIVED).count rescue 0 %>
 <p>
