--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,7 @@
 <footer>
   <small>
     <img src="/images/small_logo.png" width=35></img>
-    The <a href="<%= project_url %>"><%= full_title %></a> project - 
-     <a href="project_url">Stoney Creek Walk In Clinic</a> &copy; 2018 - All rights reserved
+    The <a href="<%= project_url %>"><%= full_title %></a> project -  &copy; 2018 - All rights reserved
   </small>
   <nav>
     <ul>
