--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,239 @@
 <% provide(:title, 'Help') %>
 
+<h1>Help Section - Staff User Level</h1>
+
+<p>&nbsp;</p>
+<a name="user_categories">
+	<h3>User Categories</h3>
+</a>
+
+<p>
+EMR supports 3 user levels: 
+<dt class="col-sm-1">Staff User </dt><dd class="col-sm-11">Reserved to clinic staff, this user class has most privileges as far as creating, viewing and editing data, but cannot perform destructive actions and administrative functions. </dd></dt>
+
+<p>&nbsp;</p>
+<dt class="col-sm-1">Doctor</dt><dd class="col-sm-11">Doctors have access only to pages relevant to them. They cannot view patient registry, perform admin functions or view other doctors' pages. Some of the functions are limited to viewing only. This includes billing functions, list of medications, diagnoses and service codes, insurance providers etc. Still, doctors have full functionality as far as daysheet during their work hours and can assign diagnoses and service codes to visits during those hours. They also have access to most documents and reference pages relevant to their patients including patient chart. They can generate their own billing reports, create letters, referrals and other documents relating to their patients.</dd>
+
+<p>&nbsp;</p>
+<dt class="col-sm-1">Admin</dt><dd class="col-sm-11"> Users of this class have full system privileges and can perform destructive functions not accessible to ather user classes including deleting visits and patient records with all related information.</dd>
+</p>
+
+  <p> &nbsp; </p>
+<div class="row">
+<div class="col-sm-8 col-sm-offset-2">
+<div class="panel panel-info text-justify">
+<div class="panel-heading">User Class Assignment</div>
+  <div class="panel-body">
+User class is assigned by administrator during user setup which works as follows: administrator creates user by registering name and email and assigning user class. After this information is saved into database, confirmation email is sent automatically to the newly registered user. This email contains activation link. By clicking this link the user is taken to their profile page, where they can assign new password only known to them. After this step new user can log into system remotely from any desktop or mobile device and have access to all pages of their user class. Forgotten password is emaild to user's registered email on request.  
+
+This Help File describes functionality of Walk-In EMR at the staff user level. There is similar description for administrative and doctor pages
+</div>
+</div>
+</div>
+</div>
+
+<p>&nbsp;</p>
+<a name="menu_descriptions">
+	<h3>Menu Descriptions</h3>
+</a>
+
+<!-- Patients menu -->
+  <a name="patients">
+    <dt class="col-sm-1">Patients</dt>
+  </a>
+
+  <dd class="col-sm-11">This page shows the registry of all patients in the database. Name column is linked to patient profile. Patient's address label can be shown by clicking on envelope icon <i class="glyphicon glyphicon-envelope"></i>. Edit icon, <i class="glyphicon glyphicon-edit"></i> will take you directly to  <%= link_to "edit patient form", "#patient_form" %>. Search box in context of Patients page supports searches by Last Name,[first Name], Date Of Birth and Health Card Number</dd>
+  
+  <p> &nbsp; </p>
+  <a name="day_sheet">
+    <dt class="col-sm-1">Day Sheet</dt>
+  </a>
+  <dd class="col-sm-11">This page contains visits for a given date, current date by default, along with some of the most important visit attributes. 
+  First colum shows visit status icon. Time column is linked to <%= link_to 'visit summary page', "#visit_summary_page" %>. 
+  Patient type can be 'O': OHIP, 'R': RMB, 'W':WCB, 'I': IFH, 'S': Self Paid or 'D': Deceased. 
+  HC/IFH# column contains Health number/IFH number, depending on patient type. 
+  Patient's label is accessible through envelope icon <i class="glyphicon glyphicon-envelope"></i>. 
+  Diag: Diagnostic code selected on <%= link_to 'Edit Visit Form', "#edit_visit_form" %>
+  Status column: Shows short description of the visit's status: 'Arrived', 'With Doctor', 'Billed', 'Paid', 'Cancelled'
+  Edit icon, <i class="glyphicon glyphicon-edit"></i> will take you to  <%= link_to "Edit Visit Form", "#edit_visit_form" %></dd>
+  
+<!-- Billing  menu -->
+  <p> &nbsp; </p>
+  <a name="billing">
+    <dt class="col-sm-1">Billing</dt>
+  </a>
+ <dd class="col-sm-11"> 
+ Billing Drop-Down menu consists of 4 submenus:
+ <p>&nbsp;</p>
+ <dl class="row">
+	 <dt class="col-sm-1">Daily Billing:</dt>
+	   <dd class="col-sm-11">List of visits which have "Ready to Bill", "Billed" or "Paid" status. By default, any previously unbilled visit, not just visits for this day, will appear in this list </dd>
+ <p>&nbsp;</p>
+	 <dt class="col-sm-1">Paid Claims</dt>
+	   <dd class="col-sm-11">Each month MHO produces payment (Remmittance Advice) file showing each claim for each doctor with relevant identification parameters, service codes and amounts submitted and paid. This submenu shows the list of claims for all doctors in chronological order. Each claim can be further described by clicking on Claim# link in the first column. Also, each claim is referenced to EMR visit id, so by clicking visit link (last column) you can go directly to the <%= link_to 'visit summary page', "#visit_summary_page" %>. Search box supports searches by Claim number, Accounting Number or Health Card Number.  Two filters at the top of the page allow to limit the list to specific doctor and to show the only claims that were adjusted by MHO up or down. </dd>
+ <p>&nbsp;</p>
+	 <dt class="col-sm-1">Pay Stubs</dt>
+	 <dd class="col-sm-11"> This section is used to generate Pay Stubs for each doctor after RA file for previous month is imported into the EMR and reconciled vith the visits by utility scripts. If data for previous month was not yet imported, appropriate warning message will be issued and <Create New Paystub> button will not appear at the bottom of the page. Otherwise, user can create paystub by clicking this button and filling out the form. Fields to be filled are: Doctor, Monthly Premium (From RA File), IFH, Cash, WCB payments received by the doctor, as well as HC Deposit received, if any, and MHO deduction used by the ministry (RA file). Once all this information is entered, click on <Generate Paystub> button and pdf file for the selected doctor will be generated and saved in the system. This file contains visit details, amounts submitted and paid and totals for the paycheck.  
+	 </dd>
+ <p>&nbsp;</p>
+	 <dt class="col-sm-1">MHO RA Messages</dt>
+	   <dd class="col-sm-11">This section contains claims summary headers from MHO RA files.  </dd>
+ </dl>
+ </dd>
+
+ <!-- Docs menu -->
+  <p> &nbsp; </p>
+  <a name="Docs">
+    <dt class="col-sm-1">Docs (Documents)</dt>
+  </a>
+ <dd class="col-sm-11">
+ Docs Drop-Down menu contains 6 submenus:
+ <p>&nbsp;</p>
+ <dl class="row">
+         <dt class="col-sm-1">Reports:</dt>
+	 <dd class="col-sm-11">This section allows to create various payment reports for the doctors working in the clinic. There are 2 types of reports: Submitted Claims Reports and Paid Claims Reports. User can chose timeframe for each category, but Paid Claims reports can only be generated for selected billing cycle, while Submitted Claims reports can use Day, Month, Range, Year or Billing Cycle as a timeframe. </dd>
+<p>&nbsp;</p>
+          <center><img src="/images/help/create_report_form.png" width=500></center>
+
+    	<dt class="col-sm-1">Invoices</dt>
+	<dd>Invoices are created for patients/services not covered by OHIP. Invoices are attributes of patients and are accessible from <%= link_to "patient summary page", "#patient_summary_form" %> </dd>
+ <p>&nbsp;</p>
+          <center><img src="/images/help/invoice_form.png" width=500></center>
+ <p>&nbsp;</p>
+	  Invoices menu lets you manage all invoices in one place. As usual, there are links to show, download and edit each invoice as well as search context-sensitive control in navigation bar to search for invoice by Patient name, insurer or description substring.
+
+ <p>&nbsp;</p>
+    	<dt class="col-sm-1">Letters</dt>
+	<dd>Letters are form-driven PDF documents generated on the fly. Just like invoices, Letters are associated with patient record and can be generated from <%= link_to "patient summary page", "#patient_summary_form" %> </dd>
+ <p>&nbsp;</p>
+          <center><img src="/images/help/letter_form.png" width=500></center>
+ <p>&nbsp;</p>
+ Letters submenu gives you access to management page where you can view, download or edit letters.
+
+ <p>&nbsp;</p>
+    	<dt class="col-sm-1">Referrals</dt>
+	<dd>This submenu functions similar to Invoces and letters and is used to manage all doctor referrals in one place. As usual, you have access to viewing, editing or downloading selected document.</dd>
+ <p>&nbsp;</p>
+          <center><img src="/images/help/referral_form.png" width=500></center>
+ <p>&nbsp;</p>
+    	<dt class="col-sm-1">Day Charts</dt>
+	<dd>Day chart is a collection of patient <%= link_to "visit forms", "#visit_form" %> for a given date.</dd>
+ <p>&nbsp;</p>
+    	<dt class="col-sm-1">Patient Charts</dt>
+	<dd>Patients who have one of the doctors working in a clinic as family doctor are called "Clinic Patient" and have chart with history of all their visits to the clinic. Charts submenu gives access to management page for these charts  </dd>
+ </dl>
+ </dd>
+
+ <!-- Ref  menu -->
+  <p> &nbsp; </p>
+  <a name="Docs">
+    <dt class="col-sm-1">Ref (Reference)</dt>
+  </a>
+ <dd class="col-sm-11">
+There are 7 submenus in this Drop-Down: 
+ <p>&nbsp;</p>
+ <dl class="row">
+         <dt class="col-sm-1">Procedures (Services):</dt>
+	 <dd class="col-sm-11">Pages in this submenu allow clinic staff to manage services used by the system. There are 2 types of services: insured and non-insured. Insured services require valid service code. Non-insured services can have any unique code assigned to them. There's also description and fee associated with each service. "Active" attribute is used to control which services will show in drop down boxes during visit processing.  </dd>
+ <p>&nbsp;</p>
+    	<dt class="col-sm-1">Diagnoses</dt>
+	<dd>This submenu is used to manage Diagnosis known to the system.</dd>
+ <p>&nbsp;</p>
+    	<dt class="col-sm-1">Insurance Providers</dt>
+	<dd>Pages in this submenu are used to manage insurance providers and law offices known to the system. This information is used form invoice generation.</dd>
+ <p>&nbsp;</p>
+    	<dt class="col-sm-1">Medications</dt>
+	<dd>Extensive list of known medications with description, dosage, format and other attributes is managed by this section of the system</dd>
+ <p>&nbsp;</p>
+    	<dt class="col-sm-1">Vaccines</dt>
+	<dd>List of vaccines known to the system</dd>
+ <p>&nbsp;</p>
+    	<dt class="col-sm-1">Doctors</dt>
+	<dd>List of local doctors with their addresses, phone numbers, locality, specialty and many other attributes. There's 2 categories of doctors: doctors working in the clinic and all the rest.  Billing information for all doctors working in the clinic must be entered into the system during initial setup. Contact information for all other doctors is used to generate refarrals, write letters etc. </dd>
+ <p>&nbsp;</p>
+    	<dt class="col-sm-1">Schedules</dt>
+	<dd>This section of the system is used to generate doctor's schedule and save it into database. Information about each doctor's schedule is then used on public page to show doctor currently on duty and opening/closing times. </dd>
+ </dl>
+ </dd>
+
+  <!-- Forms  menu -->
+  <p> &nbsp; </p>
+  <a name="Docs">
+    <dt class="col-sm-1">Forms</dt>
+  </a>
+ <dd class="col-sm-11">
+This last menu groups various forms and has 5 submenus:
+ <p>&nbsp;</p>
+ <dl class="row">
+         <dt class="col-sm-1">All Forms:</dt>
+         <dd class="col-sm-11">Will show all form categories on one page</dd>
+ <p>&nbsp;</p>
+        <dt class="col-sm-1">WCB Forms</dt>
+        <dd>Forms related to WSIB claims</dd>
+ <p>&nbsp;</p>
+        <dt class="col-sm-1">Lab Forms</dt>
+        <dd>Various Laboratory forms</dd>
+ <p>&nbsp;</p>
+        <dt class="col-sm-1">MTO Forms</dt>
+        <dd>Forms relating to medical examinations for the Ministry of Transport</dd>
+ <p>&nbsp;</p>
+        <dt class="col-sm-1">Clinic Forms </dt>
+        <dd>Forms specific to the clinic. Any custom PDF forms used in day to day operations of the clinic fall into this category.  </dd>
+ </dl>
+ </dd>
+
+ <!-- Forms reference -->
+  <p> &nbsp; </p>
+  <a name="patient_form">
+    <dt class="col-sm-1">Patient Form</dt>
+  </a>
+  <dd class="col-sm-11">This form is used to create new patient or edit existing patient's record. Most fields are self-explanatory, required fields are marked as such under input control. Mouse over question mark icon will give you additional information about the field. Some fields require additional information on how to use them and here it is:
+  <dl class="row">
+
+  <p> &nbsp; </p>
+    <dt class="col-sm-1"><li>Type:</li></dt>
+    <dd class="col-sm-11">Denotes patient type: 'HCP': OHIP covered patient; 'RMB': out of province patient with coverage in another province; 'WCB': WSIB patient; 'CSH': Cash Patient, this is usually reserved to out of country patients and patients with no active insurance plan; 'IFH': Interim Federal Health Program patients. This category is reserved for refugees and other patients with 3-rd party insurance. "DEC": denotes deceased patient</dd>
+
+  <p> &nbsp; </p>
+    <dt class="col-sm-1"><li>Clinic Patient:</li></dt>
+    <dd class="col-sm-11">Doctors working in the clinic can choose to open chart for patient. Such a patient should have this option selected. In this case, patient will appear in patient list for doctors using the system if they are listed as Family Doctor for the patient.</dd>
+
+  <p> &nbsp; </p>
+    <dt class="col-sm-1"><li>Alergies, Medications, Notes</li></dt>
+    <dd class="col-sm-11">These fields are resizeable and should contain semicolon-delimited list of allergies/medications as well as patient notes. Information entered here will automatically appear on generated patient visit form and on prescriptions </dd>
+  </dl>
+
+  <p> &nbsp; </p>
+  <center><img src="/images/help/patient_form.png" width=800></center>
+
+  <p> &nbsp; </p>
+  <a name="visit_summary_page">
+    <dt class="col-sm-1">Visit Summary Page</dt>
+  </a>
+  <dd class="col-sm-11">Shows visit summary: Status, doctor, services performed, documents uploaded, timestamp of the visit .</dd>
+  <p> &nbsp; </p>
+  <center><img src="/images/help/visit_summary.png" width=900></center>
+ 
+  <p> &nbsp; </p>
+  <a name="edit_visit_form">
+    <dt class="col-sm-1">Visit Form</dt>
+  </a>
+  <dd class="col-sm-11">This form is used to create new visit or modify an existing one</dd>
+  <p> &nbsp; </p>
+  <center><img src="/images/help/edit_visit_form.png" width=700></center>
+
+  <p> &nbsp; </p>
+  <a name="patient_summary_form">
+    <dt class="col-sm-1">Patient Summary Form</dt>
+  </a>
+  <dd class="col-sm-11">Shows patient demographics info as well as history of visits in chronological order. Has 6 context-specific buttons</dd>
+  <p> &nbsp; </p>
+  <center><img src="/images/help/patient_summary.png" width=900></center>
+
+  <p> &nbsp; </p>
+  <a name="visit_form">
+    <dt class="col-sm-1">Visit Form</dt>
+  </a>
+  <dd class="col-sm-11">This form is generated for each unique visit of the patient to the clinic </dd>
+  <p> &nbsp; </p>
+  <center><img src="/images/help/visit_form.png" width=500></center>
